welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {
^Program:9: error: Missing closing brace `}' assumed here
        return true;
        ^